Make processing service stats more accurate
Add both start and end time to storage service endpoints that retrieve
events. So the processing service queries for new events from its stored
last updated timestamp and the current timestamp.
